Added some styles

--- a/javascript/EXAM/src/index.html
+++ b/javascript/EXAM/src/index.html
@@ -22,5 +22,145 @@
             <a class="btn-search-partner" href="#">Find your holiday partner</a>
         </div>
     </header>
+    <div class="container">
+        <section class="how clearfix">
+            <h2>How Urlaubsglück works?</h2>
+            <div class="step-wrap">
+                <div class="wrap-need-for-arrows">
+                    <div class="jcarousel">
+                        <ul>
+                            <li class="jcarousel__item-1">
+                                <div class="step step--bg1">
+                                    <a class="step__btn" href="#">Step 1</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-2">
+                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                    <a class="step__btn" href="#">Step 2</a>
+                                    <h3 class="step__title">Morbi velit risus</h3>
+                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-3">
+                                <div class="step step--bg3">
+                                    <a class="step__btn" href="#">Step 3</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+                </div>
+            </div>
+            <div class="step-wrap">
+                <div class="wrap-need-for-arrows">
+                    <div class="jcarousel">
+                        <ul>
+                            <li class="jcarousel__item-1">
+                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                    <a class="step__btn" href="#">Step 2</a>
+                                    <h3 class="step__title">Morbi velit risus</h3>
+                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-2">
+                                <div class="step step--bg3">
+                                    <a class="step__btn" href="#">Step 3</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-3">
+                                <div class="step step--bg1">
+                                    <a class="step__btn" href="#">Step 1</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+                </div>
+            </div>
+            <div class="step-wrap">
+                <div class="wrap-need-for-arrows">
+                    <div class="jcarousel">
+                        <ul>
+                            <li class="jcarousel__item-1">
+                                <div class="step step--bg3">
+                                    <a class="step__btn" href="#">Step 3</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-2">
+                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                    <a class="step__btn" href="#">Step 2</a>
+                                    <h3 class="step__title">Morbi velit risus</h3>
+                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+                                </div>
+                            </li>
+                            <li class="jcarousel__item-3">
+                                <div class="step step--bg1">
+                                    <a class="step__btn" href="#">Step 1</a>
+                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+                </div>
+            </div>
+        </section>
+        <section class="partner">
+        <h2>Meet a partner for your best holiday</h2>
+        <div class="partner-wrap-all clearfix">
+            <div class="partner-wrap">
+                <div class="partner partner--margin">
+                    <div class="partner__photo-wrap partner__photo-wrap--add-icon-1">
+                        <a href="#"><img class="partner__photo" src="img/partner-1.png" alt="photo"></a>
+                    </div>
+                    <p class="partner__name">Bradley Hunter</p>
+                    <p class="partner__about">Based in Chicago. I love playing tennis and loud music.</p>
+                </div>
+            </div>
+            <div class="partner-wrap">
+                <div class="partner">
+                    <div class="partner__photo-wrap partner__photo-wrap--add-icon-2">
+                        <a href="#"><img class="partner__photo" src="img/partner-2.png" alt="photo"></a>
+                    </div>
+                    <p class="partner__name">Lucas Marsha</p>
+                    <p class="partner__about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                </div>
+            </div>
+            <div class="partner-wrap">
+                <div class="partner partner--margin-top">
+                    <div class="partner__photo-wrap partner__photo-wrap--add-icon-3">
+                        <a href="#"><img class="partner__photo" src="img/partner-3.png" alt="photo"></a>
+                    </div>
+                    <p class="partner__name">Heather Walker</p>
+                    <p class="partner__about">I'm a happy person that loves cats and climbing on mountains.</p>
+                </div>
+            </div>
+            <div class="partner-wrap">
+                <div class="partner partner--margin-top">
+                    <div class="partner__photo-wrap partner__photo-wrap--add-icon-4">
+                        <a href="#"><img class="partner__photo" src="img/partner-4.png" alt="photo"></a>
+                    </div>
+                    <p class="partner__name">Bradley Hunter</p>
+                    <p class="partner__about">Based in Chicago. I love playing tennis and loud music.</p>
+                </div>
+            </div>
+        </div>
+        <a class="btn-more-partners" href="#">See other partners</a>
+</section>
+    </div>
 </body>
 </html>
