--- a/javascript/EXAM/src/index.html
+++ b/javascript/EXAM/src/index.html
@@ -6,120 +6,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Final exam GOIT</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="clearfix">
-                <div class="login clearfix">
-                    <a class="login__link" href="#">Log in</a>
-                    <a class="login__link" href="#">Sing up</a>
-                </div>
-                <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
-            </div>
-            <h1 class="header__title clearfix">Share your<br>holiday dreams</h1>
-            <p class="header__description">And find the perfect partner to fullfill it</p>
-            <a class="btn-search-partner" href="#">Find your holiday partner</a>
-        </div>
-    </header>
+
+<!--HEADER-->
+
+<header class="header">
     <div class="container">
-        <section class="how clearfix">
-            <h2>How Urlaubsglück works?</h2>
-            <div class="step-wrap">
-                <div class="wrap-need-for-arrows">
-                    <div class="jcarousel">
-                        <ul>
-                            <li class="jcarousel__item-1">
-                                <div class="step step--bg1">
-                                    <a class="step__btn" href="#">Step 1</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-2">
-                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
-                                    <a class="step__btn" href="#">Step 2</a>
-                                    <h3 class="step__title">Morbi velit risus</h3>
-                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-3">
-                                <div class="step step--bg3">
-                                    <a class="step__btn" href="#">Step 3</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
-                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
-                </div>
+        <div class="clearfix">
+            <div class="login clearfix">
+                <a class="login__link" href="#">Log in</a>
+                <a class="login__link" href="#">Sing up</a>
             </div>
-            <div class="step-wrap">
-                <div class="wrap-need-for-arrows">
-                    <div class="jcarousel">
-                        <ul>
-                            <li class="jcarousel__item-1">
-                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
-                                    <a class="step__btn" href="#">Step 2</a>
-                                    <h3 class="step__title">Morbi velit risus</h3>
-                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-2">
-                                <div class="step step--bg3">
-                                    <a class="step__btn" href="#">Step 3</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-3">
-                                <div class="step step--bg1">
-                                    <a class="step__btn" href="#">Step 1</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
-                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+            <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
+        </div>
+        <h1 class="header__title clearfix">Share your<br>holiday dreams</h1>
+        <p class="header__description">And find the perfect partner to fullfill it</p>
+        <a class="btn-search-partner" href="#">Find your holiday partner</a>
+    </div>
+</header>
+
+<!--HOW-->
+
+<div class="container">
+    <section class="how clearfix">
+        <h2>How Urlaubsglück works?</h2>
+        <div class="step-wrap">
+            <div class="wrap-need-for-arrows">
+                <div class="jcarousel">
+                    <ul>
+                        <li class="jcarousel__item-1">
+                            <div class="step step--bg1">
+                                <a class="step__btn" href="#">Step 1</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-2">
+                            <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                <a class="step__btn" href="#">Step 2</a>
+                                <h3 class="step__title">Morbi velit risus</h3>
+                                <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus,
+                                    sit amet porttitor est.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-3">
+                            <div class="step step--bg3">
+                                <a class="step__btn" href="#">Step 3</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+                <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
             </div>
-            <div class="step-wrap">
-                <div class="wrap-need-for-arrows">
-                    <div class="jcarousel">
-                        <ul>
-                            <li class="jcarousel__item-1">
-                                <div class="step step--bg3">
-                                    <a class="step__btn" href="#">Step 3</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-2">
-                                <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
-                                    <a class="step__btn" href="#">Step 2</a>
-                                    <h3 class="step__title">Morbi velit risus</h3>
-                                    <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
-                                </div>
-                            </li>
-                            <li class="jcarousel__item-3">
-                                <div class="step step--bg1">
-                                    <a class="step__btn" href="#">Step 1</a>
-                                    <h3 class="step__title">Sed leo enim, condimentum</h3>
-                                    <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
-                    <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+        </div>
+        <div class="step-wrap">
+            <div class="wrap-need-for-arrows">
+                <div class="jcarousel">
+                    <ul>
+                        <li class="jcarousel__item-1">
+                            <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                <a class="step__btn" href="#">Step 2</a>
+                                <h3 class="step__title">Morbi velit risus</h3>
+                                <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus,
+                                    sit amet porttitor est.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-2">
+                            <div class="step step--bg3">
+                                <a class="step__btn" href="#">Step 3</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-3">
+                            <div class="step step--bg1">
+                                <a class="step__btn" href="#">Step 1</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+                <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
             </div>
-        </section>
-        <section class="partner">
+        </div>
+        <div class="step-wrap">
+            <div class="wrap-need-for-arrows">
+                <div class="jcarousel">
+                    <ul>
+                        <li class="jcarousel__item-1">
+                            <div class="step step--bg3">
+                                <a class="step__btn" href="#">Step 3</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-2">
+                            <div class="step step--bg2-and-padding step--bg2-and-padding-and-margin">
+                                <a class="step__btn" href="#">Step 2</a>
+                                <h3 class="step__title">Morbi velit risus</h3>
+                                <p class="step__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus,
+                                    sit amet porttitor est.</p>
+                            </div>
+                        </li>
+                        <li class="jcarousel__item-3">
+                            <div class="step step--bg1">
+                                <a class="step__btn" href="#">Step 1</a>
+                                <h3 class="step__title">Sed leo enim, condimentum</h3>
+                                <p class="step__text">Quisque libero libero, dictum non turpis in, luctus semper lorem.
+                                    Donec rhoncus a leo sit amet facilisis.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#" class="jcarousel-control-prev"><img src="img/arrow-left.png" alt="left"></a>
+                <a href="#" class="jcarousel-control-next"><img src="img/arrow-right.png" alt="right"></a>
+            </div>
+        </div>
+    </section>
+
+    <!--PARTNERS-->
+
+    <section class="partner">
         <h2>Meet a partner for your best holiday</h2>
         <div class="partner-wrap-all clearfix">
             <div class="partner-wrap">
@@ -137,7 +156,8 @@
                         <a href="#"><img class="partner__photo" src="img/partner-2.png" alt="photo"></a>
                     </div>
                     <p class="partner__name">Lucas Marsha</p>
-                    <p class="partner__about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                    <p class="partner__about">I get my inspiration from nature and objects around me. I have a passion
+                        to colours, typography and skateboards.</p>
                 </div>
             </div>
             <div class="partner-wrap">
@@ -160,7 +180,52 @@
             </div>
         </div>
         <a class="btn-more-partners" href="#">See other partners</a>
-</section>
+    </section>
+
+    <!--IDEAS-->
+
+    <section class="ideas">
+        <h2>Discover holiday activity ideas</h2>
+
+        <script type="text/tmpl" id="tmplHtml">
+			<figure class="tile">
+				<img class="tile__img" src="<%= webformatURL %>" alt="img">
+				<figcaption class="tile__tag"><%= tags.split(',')[0] %></figcaption>
+			</figure>
+
+        </script>
+
+        <div class="tiles clearfix"></div>
+        <h2>Discover holiday activity ideas</h2>
+
+        <form action="#" class="form-search-partner clearfix">
+            <p class="form-search-partner__title">Hi! What are your holiday interests?</p>
+            <input type="text" class="form-search-partner__field" placeholder="Enter your interests">
+            <button class="form-search-partner__btn">Search partners</button>
+        </form>
+    </section>
+</div>
+
+<!--FOOTER-->
+
+<footer class="footer">
+    <div class="container clearfix">
+        <div class="logo-footer"><a href="index.html">URLAUBSGLÜCK</a></div>
+        <p class="company">Company</p>
+        <nav class="nav">
+            <ul class="nav__list clearfix">
+                <li class="nav__item"><a class="nav__link" href="#">About</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Press</a></li>
+                <li class="nav__item"><a class="nav__link" href="#">Blog</a></li>
+            </ul>
+        </nav>
+        <p class="partners">Partners</p>
+        <div class="developer clearfix">
+            <p class="developer__designed">Designed by</p>
+            <img class="developer__logo" src="img/developer.png" alt="developer">
+        </div>
     </div>
+</footer>
 </body>
 </html>
