Added some scss style

--- a/loftschool/dz_webinar8/index.html
+++ b/loftschool/dz_webinar8/index.html
@@ -8,7 +8,7 @@
 <!--<html lang="ru-Ru">-->
 <head>
 	<meta charset="UTF-8">
-	<title>Site shablon</title>
+	<title>Вебинар №8</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta name="viewport" content="width=960">
 	<link rel="stylesheet" href="css/main.css">
